chore: add div card-python-analise and card-python-automacao

--- a/html/index.html
+++ b/html/index.html
@@ -21,5 +21,25 @@
             <a href="#" class="btn btn-primary">Inicie por R$50</a>
         </div>
     </div>
+    <div class="card" id="card-python-automacao">
+        <div class="header">
+            Python
+        </div>
+        <div class="body">
+            <h5 class="card-title">Python Automação</h5>
+            <p class="card-text">Tudo que voce precisa saber para automatizar em python</p>
+            <a href="#" class="btn btn-primary">Inicie por R$100</a>
+        </div>
+    </div>
+    <div class="card" id="card-python-analise">
+        <div class="header">
+            Python
+        </div>
+        <div class="body">
+            <h5 class="card-title">Python Análise de Dados</h5>
+            <p class="card-text">Tudo que voce precisa saber para analisar dados em python</p>
+            <a href="#" class="btn btn-primary">Inicie por R$150</a>
+        </div>
+    </div>
 </body>
 </html>
